--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -33,6 +33,33 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url('#{$path-fonts}/Roboto-Regular.woff2') format('woff2'),
+    url('#{$path-fonts}/Roboto-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('#{$path-fonts}/Roboto-Medium.woff2') format('woff2'),
+    url('#{$path-fonts}/Roboto-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('#{$path-fonts}/Roboto-Bold.woff2') format('woff2'),
+    url('#{$path-fonts}/Roboto-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 // @font-face {
 //   font-family: 'Montserrat';
 //   src: url('../fonts/MontserratRegular.woff2') format('woff2'),
