--- a/src/pages/article-lib-new_old.pug
+++ b/src/pages/article-lib-new_old.pug
@@ -66,12 +66,12 @@ block content
           .fragment-special.text-green.mb-40px.lg_mb-60px
             .fragment-speical__inner.text-gray-500
               p Артрит коленных суставов относят к часто встречающимся патологиям воспалительного характера. Причины их развития бывают разнообразными. Суставные патологии при артрите всегда сопровождаются болевыми ощущениями. Из-за болезненности снижается объем движений в суставе.
-          .code
-            code &lt;div class="fragment-special text-green mb-40px lg_mb-60px">
-            code  &lt;div class="fragment-speical__inner text-gray-500">
-            code     &lt;p>Артрит коленных суставов&lt/p>
-            code   &lt;/div>
-            code &lt;/div>
+          //- .code
+          //-   code &lt;div class="fragment-special text-green mb-40px lg_mb-60px">
+          //-   code  &lt;div class="fragment-speical__inner text-gray-500">
+          //-   code     &lt;p>Артрит коленных суставов&lt/p>
+          //-   code   &lt;/div>
+          //-   code &lt;/div>
           .article__img.img-cover.h-200px.mb-35px.lg_mb-30px
             img.lazyload(
             data-sizes="auto",
@@ -81,17 +81,17 @@ block content
                     'img/arthrit_800x400.jpg 481w, ' +
                     'img/article-2_864x346.jpg 801w'
             )
-          .code
-            code &lt;div class="article__img img-cover h-200px mb-35px lg_mb-30px">
-            code   &lt;img class="lazyload"
-            code      data-sizes="auto"
-            code      data-src="/img/arthrit_320x160.jpg"
-            code      data-srcset=
-            code        "/img/arthrit_320x160.jpg 360w,
-            code        /img/arthrit_480x240.jpg 361w,
-            code        /img/arthrit_800x400.jpg 481w,
-            code        /img/article-2_864x346.jpg 801w">
-            code &lt;/div>
+          //- .code
+          //-   code &lt;div class="article__img img-cover h-200px mb-35px lg_mb-30px">
+          //-   code   &lt;img class="lazyload"
+          //-   code      data-sizes="auto"
+          //-   code      data-src="/img/arthrit_320x160.jpg"
+          //-   code      data-srcset=
+          //-   code        "/img/arthrit_320x160.jpg 360w,
+          //-   code        /img/arthrit_480x240.jpg 361w,
+          //-   code        /img/arthrit_800x400.jpg 481w,
+          //-   code        /img/article-2_864x346.jpg 801w">
+          //-   code &lt;/div>
           p
             .relative.inline-block.pr-15px Артрит коленных суставов
               +info-tip(class='info-tip--right' data-content='гонартрит')
@@ -120,12 +120,12 @@ block content
             code       &lt;span>Скачать методику&lt;/span>
             code     &lt;/a>
             code &lt;/div>
-          p <b class='text-lg lg_text-xl'>Первичный артрит</b> — это последствие травм:
-          .code
-            code &lt;p>&lt;b class='text-lg lg_text-xl'>Первичный артрит&lt;/b> — это последствие травм:
-          p.text-black.lg_text-xl <b class='lg_text-xl'>Вторичное&lt;/b> поражение возникает на фоне следующих патологий:
-          .code
-            code &lt;p class="text-black lg_text-xl">&lt;b class='lg_text-xl'>Вторичное&lt;/b> поражение возникает на фоне следующих патологий:&lt;/p>
+          //- p <b class='text-lg lg_text-xl'>Первичный артрит</b> — это последствие травм:
+          //- .code
+          //-   code &lt;p>&lt;b class='text-lg lg_text-xl'>Первичный артрит&lt;/b> — это последствие травм:
+          //- p.text-black.lg_text-xl <b class='lg_text-xl'>Вторичное&lt;/b> поражение возникает на фоне следующих патологий:
+          //- .code
+          //-   code &lt;p class="text-black lg_text-xl">&lt;b class='lg_text-xl'>Вторичное&lt;/b> поражение возникает на фоне следующих патологий:&lt;/p>
           div.border.border-black.border-dashed.rounded-10px.p-30px.mt-30px.mb-30px.lg_p-40px
             p.text-black.text-lg.lg_text-2xl Факторами риска, предрасполагающими к развитию болезни, считают следующее:
             ul.pl-0.mb-0.lg_pl-15px
@@ -157,7 +157,7 @@ block content
             .text-lg.text-black.mb-5px.lg_text-xl.lg_self-start Рикта рекомендует
             p(class='!mb-0') При третьей и четвертой стадии болезни суставов требуется немедленно обратиться за медицинской помощью.
           h2#diag Диагностика
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -192,7 +192,7 @@ block content
             .text-lg.text-black.mb-5px.lg_text-xl.lg_self-start Обратите внимание
             p(class='!mb-0') Если диагностика проведена несвоевременно и некачественно, лечение вовремя не назначается. Болезнь приобретает хроническое течение.
           h2#cure.mt-0 Лечение
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -213,7 +213,7 @@ block content
             li <b>Антибиотики.</b> Чаще других применяют препараты из группы пенициллинов и макролидов. Они становятся важной частью лечения. Эти лекарства нужны, чтобы уничтожить патогенные микроорганизмы внутри сустава. Их назначают при инфекционном артрите колена или его гнойных осложнениях.
           p В качестве дополнительного лечения пациентам назначают витаминно-минеральные комплексы, общеукрепляющие средства, а также биодобавки, содержащие пивные дрожжи и кальций.
           h3 Физиотерапия
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -229,7 +229,7 @@ block content
             p(class='!mb-0') Значимым достоинством этого лечения при артрите считают доступность. Она хорошо сочетается с другими лечебными средствами комплексной терапевтической программы. Физиотерапия бережно воздействует на организм, оказывает длительный эффект. При ее применении почти отсутствуют побочные явления.
           p Главной задачей при терапии артрита коленных суставов считают уменьшение боли и восстановление их функций. Физиотерапия повышает качество жизни пациента и улучшает его самочувствие. Все методы требуют предварительной консультации врача.
           h3.lg_mb-25px Магнитотерапия
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -241,7 +241,7 @@ block content
           p Действующей силой этой терапии считают магнитное поле. Оно улучшает кровоснабжение хряща и лучше насыщает сустав питательными веществами. Это лечение при артрите активизирует выведение продуктов распада клеток и воспаления. Оно способствует подавлению аутоиммунных реакций.
           p В результате магнитотерапии уменьшается боль, снимается отечность, улучшается подвижность сустава. Затормаживаются процессы дегенерации в хрящевой ткани при артрите. Повышается проницаемость сосудов области колена, что способствует лучшему проникновению лекарств. Магнитофорез проводят после нанесения на колено наружных лекарственных средств.
           h3 Ультрафиолетовое облучение
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -252,7 +252,7 @@ block content
             )
           p УФО, снижая чувствительность в зоне поражения, устраняет боль. Оно в организме активизирует синтез витамина D3, который необходим, чтобы лучше усваивался кальций. Этот минерал важен для повышения крепости костей. УФО стимулирует обмен веществ в суставах.
           h3 Электрофорез
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -263,7 +263,7 @@ block content
             )
           p При этом методе сквозь кожу в толщу мышц вводятся лекарства под воздействием электрического тока. Он усиливает микроциркуляцию в околосуставных тканях колена. Это снимает воспаление, отечность и болевые ощущения в колене. Устраняются мышечные спазмы и судороги. Электрофорез обладает длительным лечебным действием.
           h3 УВЧ
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -274,7 +274,7 @@ block content
             )
           p Метод воздействует на суставные ткани с помощью ультравысокочастотных волн. Они помогают избавиться от болевых ощущений. Снимают воспаление и отек. Применение УВЧ противопоказано у больных с гипертонией.
           h3 Ультразвуковая терапия
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -285,7 +285,7 @@ block content
             )
           p Ультразвук усиливает всасывание наружных лекарственных средств. Его часто применяют для местного введения гормональных мазей в области колена. Метод не назначают при стенокардии.
           h3 Бальнеотерапия
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -296,7 +296,7 @@ block content
             )
           p Водные процедуры при артрите коленных суставов получили широкое применение. Активно проводят лечебные ванночки и ванны с радоном, солями, нафталаном, растительными экстрактами, сероводородом, йодобромом. Под их воздействием при артрите улучшается кровообращение в области колена, активизируются обменные процессы в суставе. Усиливается трофика тканей, стимулируется регенерация. Снимается воспаление и боль. Хороший отклик получают на ранней стадии артрита.
           h3 Грязелечение
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -307,7 +307,7 @@ block content
             )
           p Ванны, обертывания, аппликации с грязями оказывают на сустав тепловое и механическое воздействие. Они питают ткани минералами и биологически активными веществами. Ликвидируется воспалительный процесс, убираются при артрите даже стойкие болевые ощущения.
           h3 Парафиновые обертывания
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
@@ -318,7 +318,7 @@ block content
             )
           p Их применяют как вспомогательный метод. Парафин растапливают на водяной бане. Затем его остужают до комфортной температуры. На колено наносят парафиновую массу. Сверху обматывают полиэтиленовой пленкой и укутывают мягкой тканью. Метод улучшает кровообращение в суставе, уменьшает боль при артрите.
           h3 Массаж
-          .article__img.img-cover.h-200px.lg_h-auto.mb-20px
+          .article__img.img-cover.h-200px.mb-20px
             img.lazyload(
             data-sizes="auto",
             data-src='img/arthrit_320x160.jpg',
